# ReTexture

./: .gitignore  DEPLOYMENT_GUIDE.md  LICENSE  README.md  STICKER_SYSTEM.md  TROUBLESHOOTING.md  VERCEL_BUILD_FIX.md  backend-test.html  presentation-content.md  presentation.html
Agents/: .env.example  .gitignore  PLACEMENT_REDESIGN.md  README.md  import_test.py  minimal_app.py  onnx_test.py  pyproject.toml  render.yaml  requirements.txt  test_api.py  test_auto_fix.py  test_env.py  test_placement_request.py  test_placement_schema.py
Agents/Tools/: image_generator.py
Agents/adaptive-canvas-ai/: final_ad.html  pyproject.toml  test_ad.html
Agents/adaptive-canvas-ai/src/adaptive_canvas_ai/: app.py  graph.py  schemas.py
Agents/adaptive-canvas-ai/src/adaptive_canvas_ai/tools/: bg_generator.py  compliance.py  exporter.py  (+5 more)
Agents/adaptive-canvas-ai/tests/: chunk1.py  chunk2.py  chunk3.py  chunk4.py  chunk5.py  chunk6.py
Agents/app/: api.py  main.py  service.py
Agents/app/agents/: background_processors.py  builder.py  config.py  masks_utils.py  runner.py
Agents/app/api/: routes.py
Agents/app/core/: ai_service.py  compliance.py  compliant_generation.py  logo_overlay.py  models.py  placement_constraints.py  placement_generator.py  prompts.py  remove-bg.py  space_analyzer.py  spatial_grid.py  text_overlay.py  validators.py  value_tiles.py
Agents/app/resources/: ruleset.txt  system_prompt.py  validation_rules.json
Agents/app/routers/: generate.py  headline_routes.py  placement.py  remove_bg.py  test.py  validate.py
Agents/app/services/: __init__.py  headline_service.py  validation_service.py
Agents/templates/: ad_canvas.html
agent_backend/: .env.sample  api.py  pyproject.toml
agent_backend/resources/: rules.md
agent_backend/tests/: test_background_removal.py  test_compliance.py  test_gemini.py
agent_backend/utils/: background.py  compliance.py  llms.py  prompts.py  variations.py
(+156 files in other folders)
