[project]
name = "ai-studio"
version = "0.1.0"
description = "AI Studio FastAPI backend"
authors = [
    {name = "Himanshu Gupta", email = "ghimax23@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"

dependencies = [
    "fastapi>=0.122.0,<0.123.0",
    "uvicorn>=0.38.0,<0.39.0",
    "langgraph>=1.0.4,<2.0.0",
    "langchain-google-genai>=3.2.0,<4.0.0",
    "langchain-core>=1.1.0,<2.0.0",
    "python-dotenv>=1.2.1,<2.0.0",
    "rembg>=2.0.68,<3.0.0",
    "pillow>=12.0.0,<13.0.0",
    "onnxruntime>=1.23.2,<2.0.0",
    "numpy>=2,<2.3.0",
    "opencv-python-headless>=4.12.0.88,<5.0.0.0",
    "python-multipart>=0.0.7,<1.0.0"
]

[tool.poetry]
packages = [
    { include = "app" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
